cabal-version: 2.4
name:          azimuth
version:       0.1.0
synopsis:      OpenTelemetry-style Telemetry Suite
description:   OpenTelemetry-style MoonBit Telemetry Suite
category:      Development
homepage:      https://github.com/183600/Azimuth
bug-reports:   https://github.com/183600/Azimuth/issues
author:        Azimuth Team
maintainer:    Azimuth Team
copyright:     2025 Azimuth Team
license:       MIT
license-file:  LICENSE
build-type:    Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/183600/Azimuth

library
  exposed-modules:
      Azimuth.Telemetry
  other-modules:
      Paths_azimuth
  hs-source-dirs:
      src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , hashable
    , random
    , text

test-suite azimuth-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_azimuth
    , AdditionalSpec
    , ExtendedSpec
    , NewTestSpec
  hs-source-dirs:
      test
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , azimuth
    , hspec >=2.0
    , QuickCheck >=2.14
    , random
    , text
  build-tool-depends:
      hspec-discover:hspec-discover

flag fast
  description: Enable fast compilation
  default: False
  manual: True

flag production
  description: Enable production optimizations
  default: False
  manual: True