cabal-version: 2.4
name:          azimuth
version:       0.1.0
synopsis:      OpenTelemetry-style Telemetry Suite
description:   OpenTelemetry-style MoonBit Telemetry Suite
category:      Development
homepage:      https://github.com/183600/Azimuth
bug-reports:   https://github.com/183600/Azimuth/issues
author:        Azimuth Team
maintainer:    Azimuth Team
copyright:     2025 Azimuth Team
license:       MIT
license-file:  LICENSE
build-type:    Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/183600/Azimuth

library
  exposed-modules:
      Azimuth.Telemetry
  other-modules:
      Paths_azimuth
  hs-source-dirs:
      src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , containers
    , hashable
    , random
    , text

executable test-fixes
  main-is: TestFixes.hs
  hs-source-dirs:
      src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , azimuth
    , containers
    , hashable
    , random
    , text

test-suite azimuth-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_azimuth
    , AdditionalSpec
    , AdditionalTestSpec
    , AdditionalTestSpec2
    , AdditionalTestSpec3
    , AdditionalCoverageSpec
    , AdditionalCabalTestSpec
    , AdvancedTestSpec
    , AdvancedQuickCheckSpec
    , AdvancedTelemetrySpec
    , BasicTelemetrySpec
    , ExtendedSpec
    , NewTestSpec
    , EnhancedTestSpec
    , QuickCheckSpec
    , ComprehensiveTestSpec
    , NewTelemetrySpec
    , AdditionalQuickCheckTestSpec
    , DebugMetricSpec
    , EnhancedTelemetrySpec
    , NewQuickCheckTestsSpec
    , EnhancedQuickCheckTestSpec
    , AzimuthCabalTestSpec
    , NewCabalTestSpec
    , EnhancedCabalTestSpec
    , ComprehensiveIntegrationSpec
    , MetricPropertiesSpec
    , SpanPropertiesSpec
    , LoggerPropertiesSpec
    , TelemetryConfigSpec
    , MetricAggregationSpec
    , ConcurrentTelemetrySpec
    , TextHandlingSpec
    , NumericBoundarySpec
    -- , ResourceLifecycleSpec  -- Temporarily disabled due to parsing issues
    , TelemetryIntegrationSpec
    , AdvancedCabalTestSpec
    , EnhancedCabalQuickCheckSpec
    , BoundaryConditionCabalSpec
    , ConcurrentCabalTestSpec
    , PerformanceCabalTestSpec
    , IntegrationCabalTestSpec
    , DomainCabalTestSpec
    , RegressionCabalTestSpec
    , EdgeCaseCabalTestSpec
    , RealWorldCabalTestSpec
    , MetricAggregationTestSpec
    , SpanTracingTestSpec
    , LoggingTestSpec
    , ConfigurationTestSpec
    , ErrorHandlingTestSpec
    , EnhancedTelemetrySuiteSpec
    , MetricAggregationCabalTestSpec
    , TimeSeriesCabalTestSpec
    , ErrorRecoveryCabalTestSpec
    , ConfigHotReloadCabalTestSpec
    , ResourceLimitCabalTestSpec
    , DataIntegrityCabalTestSpec
    , PerformanceRegressionCabalTestSpec
    , CompatibilityCabalTestSpec
    , SecurityCabalTestSpec
    , NewComprehensiveTestSpec
    , AdvancedCabalTestSpec2
  hs-source-dirs:
      test
  default-language: Haskell2010
  default-extensions: ScopedTypeVariables, BlockArguments
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , azimuth
    , bytestring
    , containers
    , hashable
    , hspec >=2.0
    , QuickCheck >=2.14
    , random
    , stm
    , text
    , time
  build-tool-depends:
      hspec-discover:hspec-discover

flag fast
  description: Enable fast compilation
  default: False
  manual: True

flag production
  description: Enable production optimizations
  default: False
  manual: True